--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: black;
     color: #blue;
     text-align: center;
     font-family: "Arial";
@@ -26,6 +27,12 @@ body
     font-size: 0.5cm;
 }
 
+#cabecera #logo
+{
+    width: 40px;
+    vertical-align: middle;
+}
+
 #container
 {
     width: 70%;
@@ -42,5 +49,6 @@ body
 
 #post
 {
+    background: white;
     padding: 1cm;
 }
